--- a/credentials.yml
+++ b/credentials.yml
@@ -6,10 +6,10 @@ rest:
 #  # you don't need to provide anything here - this channel doesn't
 #  # require any credentials
 
-twilio:
-  account_sid: "ACd3aee457ba398d6ee9576275e1c48f6b"
-  auth_token: "aa4baf6bac6abfe1b45adfdf3ca51dcc"
-  twilio_number: "whatsapp:+14155238886"  # if using WhatsApp: "whatsapp:+440123456789"
+# twilio:
+#   account_sid: "ACd3aee457ba398d6ee9576275e1c48f6b"
+#   auth_token: "aa4baf6bac6abfe1b45adfdf3ca51dcc"
+#   twilio_number: "whatsapp:+14155238886"  # if using WhatsApp: "whatsapp:+440123456789"
 
 socketio:
   user_message_evt: user_uttered
