--- a/config.yml
+++ b/config.yml
@@ -53,3 +53,10 @@ policies:
   max_history: 5
   epochs: 100
   constrain_similarities: true
+- name: "RulePolicy"
+  core_fallback_threshold: 0.3
+  core_fallback_action_name: action_default_fallback
+  enable_fallback_prediction: true
+  restrict_rules: true
+  check_for_contradictions: true
+
