--- a/data/nlu/lainnya_question_nlu.yml
+++ b/data/nlu/lainnya_question_nlu.yml
@@ -3,6 +3,8 @@ version: "3.1"
 nlu:
 - intent: lainnya_manfaat_lagu
   examples: |
+    - manfaat lagu 
+    - manfaat musik
     - manfaat menyanyikan lagu untuk bayi
     - kegunaan lagu untuk perkembangan otak bayi
     - apa manfaat musik untuk bayi
