--- a/data/stories/tumbuh_kembang.yml
+++ b/data/stories/tumbuh_kembang.yml
@@ -6,7 +6,13 @@ stories:
   - checkpoint: menu_tk
   - action: utter_welcome_menu_tk
   - checkpoint: menu_tk_2
-  
+
+- story: pertanyaan lainnya
+  steps:
+  - checkpoint: menu_tk_2
+  - intent: pertanyaan_lainnya
+  - action: utter_welcome_pertanyaan_lainnya
+  - checkpoint: menu_lainnya
 # stimulus
 - story: stimulus umur 0 hari - 3 bulan 
   steps:
